Fixed project wraps, Fixed missing font chars

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -233,7 +233,6 @@ pointer-events: all;
     flex-direction: column;
     margin-top: 100px;
     background-color: rgb(250, 252, 255);
-    height: 1000px;
     padding-top: 75px;
 }
 
@@ -241,122 +240,88 @@ pointer-events: all;
     color: rgb(29, 29, 31);
 }
 
-#qrpixel-wrap{
-    width: 100vw;
+.site-wrap{
+    width: 300px;
+    padding: 50px;
     display: flex;
-    padding-left: 30px;
+    flex-direction: column;
+    justify-content: end;
     align-items: center;
-    
+
 }
 
-#qr-logo{
+.work-logo{
     width: 75px;
+    overflow-x: hidden;
     position: absolute;
     border: 4px solid rgb(29, 29, 31);
+    z-index: 10;
+    margin-top: 40px;
+    filter: drop-shadow(0px 35px 30px #bbbbbb);
+    
+    
 }
-#qr-screen{
-    width: 75%;
+.work-img{
+    width: 100%;
     border: 4px solid rgb(29, 29, 31);
     margin: 0px auto;
+    filter: drop-shadow(0px 35px 30px #bbbbbb);
 }
-#qr-link{
-    
-    margin-left: 30px;
-    width: 75%;
-    border: solid rgb(29, 29, 31);
-    border-width: 0px 4px 4px 4px;
-    padding: 10px 0px 10px 0px;
-}
-
-#qr-link>a{
-    color: rgb(29, 29, 31);
-    text-decoration: none;
-    padding-left: 15px;
-    font-size: 20px;
-}
-
-
-
-
-#dream-wrap{
-    margin-top: 75px;
-    width: 100vw;
+.work-links{
+    width: 300px;
     display: flex;
-    padding-left: 30px;
+    margin: 0 auto;
+    justify-content: space-between;
     align-items: center;
+    z-index: 11;
+    margin-top: 25px;
     
+}
+.qr-links{
+    background-color: #ef3e23;
+    
+}
+.dream-links{
+    background-color: #212121;
+}
+.weather-links{
+    background-color: rgb(58, 208, 242);
+}
+.work-links>a{
+    border: 4px solid rgb(29, 29, 31);
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+    width: 120px;
+    text-align: center;
 }
 
 #dream-logo{
-    width: 75px;
-    position: absolute;
+    background-color: #212121;
+    height: 55px;
+    width: 55px;
+    padding: 10px;
     border: 4px solid rgb(29, 29, 31);
-    height: 75px;
-    background-color: #4ea8de;
-}
-
-#dream-screen{
-    width: 75%;
-    border: 4px solid rgb(29, 29, 31);
-    margin: 0px auto;
-}
-#dream-link{
-    
-    margin-left: 30px;
-    width: 75%;
-    border: solid rgb(29, 29, 31);
-    border-width: 0px 4px 4px 4px;
-    padding: 10px 0px 10px 0px;
-}
-
-#dream-link>a{
-    color: rgb(29, 29, 31);
-    text-decoration: none;
-    padding-left: 15px;
-    font-size: 20px;
-}
-
-
-
-
-
-
-#weather-wrap{
-    margin-top: 75px;
-    width: 100vw;
-    display: flex;
-    padding-left: 30px;
-    align-items: center;
-    
 }
 
 #weather-logo{
-    width: 75px;
-    position: absolute;
-    border: 4px solid rgb(29, 29, 31);
-    height: 75px;
     background-color: rgb(58, 208, 242);
+    height: 55px;
+    width: 55px;
+    padding: 10px;
 }
-
-#weather-screen{
-    width: 75%;
-    border: 4px solid rgb(29, 29, 31);
-    margin: 0px auto;
-}
-#weather-link{
+#work-languages{
+    display: flex;
+    justify-content: space-evenly;
+    width: 300px;
+    margin-top: 50px;
+    margin-bottom: 100px;
     
-    margin-left: 30px;
-    width: 75%;
-    border: solid rgb(29, 29, 31);
-    border-width: 0px 4px 4px 4px;
-    padding: 10px 0px 10px 0px;
 }
-
-#weather-link>a{
-    color: rgb(29, 29, 31);
-    text-decoration: none;
-    padding-left: 15px;
-    font-size: 20px;
+#work-languages>img{
+    background-color: white;
+    width: 60px;
+    border: 4px solid rgb(29, 29, 31);
 }
 
 /* EDUCATION */
@@ -602,12 +567,15 @@ margin-left: -25px;
 /* FONTS */
 @font-face {
     font-family: 'Visby';
-    src: url('/static/css/fonts/Visby.otf') format("truetype");
+    src: url('/static/css/fonts/Visby.ttf') format("truetype");
 }
 
 
 /* MEDIA QURIES */
-@media screen and (min-width: 768px) {
+
+
+
+@media screen and (min-width: 768px) { /* TABLET */
     h1{
         font-size: 65px;
     }
@@ -625,25 +593,9 @@ margin-left: -25px;
     #sentences{
         font-size: 30px;
     }
-    #work-wrapper{
-        
-        height: 1500px;
-    }
-    #qr-logo{
-        width: 150px;
-        margin-left: 25px;
-    }
-    #dream-logo{
-        width: 150px;
-        height: 150px;
-        margin-left: 25px;
-    }
-    #weather-logo{
-        width: 150px;
-        height: 150px;
-        margin-left: 25px;
-    }
 
+  
+    
     #clock-section{
         margin: 200px 0px 200px 0px;
     }
@@ -711,3 +663,4 @@ margin-left: -25px;
         width: 300px;
     }
 }
+
